@@ -1,79 +1,23 @@
-
 package org.endeavourhealth.imapi.transforms;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
-
-import java.io.IOException;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Map;
-import java.util.Properties;
-import java.util.Set;
-import java.util.UUID;
-import java.util.stream.Collectors;
-
 import lombok.Getter;
 import lombok.Setter;
 import org.apache.commons.collections4.CollectionUtils;
 import org.endeavourhealth.imapi.logic.exporters.ImportMaps;
 import org.endeavourhealth.imapi.model.customexceptions.EQDException;
 import org.endeavourhealth.imapi.model.iml.Entity;
-import org.endeavourhealth.imapi.model.imq.Assignable;
-import org.endeavourhealth.imapi.model.imq.IriLD;
-import org.endeavourhealth.imapi.model.imq.Match;
-import org.endeavourhealth.imapi.model.imq.Node;
-import org.endeavourhealth.imapi.model.imq.Operator;
-import org.endeavourhealth.imapi.model.imq.Order;
-import org.endeavourhealth.imapi.model.imq.OrderDirection;
-import org.endeavourhealth.imapi.model.imq.Path;
-import org.endeavourhealth.imapi.model.imq.Query;
-import org.endeavourhealth.imapi.model.imq.QueryException;
-import org.endeavourhealth.imapi.model.imq.QueryType;
-import org.endeavourhealth.imapi.model.imq.Range;
-import org.endeavourhealth.imapi.model.imq.RelativeTo;
-import org.endeavourhealth.imapi.model.imq.Return;
-import org.endeavourhealth.imapi.model.imq.Value;
-import org.endeavourhealth.imapi.model.imq.Where;
-import org.endeavourhealth.imapi.model.tripletree.TTDocument;
-import org.endeavourhealth.imapi.model.tripletree.TTEntity;
-import org.endeavourhealth.imapi.model.tripletree.TTIriRef;
-import org.endeavourhealth.imapi.model.tripletree.TTLiteral;
-import org.endeavourhealth.imapi.model.tripletree.TTNode;
-import org.endeavourhealth.imapi.transforms.eqd.EQDOCBaseCriteriaGroup;
-import org.endeavourhealth.imapi.transforms.eqd.EQDOCColumnOrder;
-import org.endeavourhealth.imapi.transforms.eqd.EQDOCColumnValue;
-import org.endeavourhealth.imapi.transforms.eqd.EQDOCCriteria;
-import org.endeavourhealth.imapi.transforms.eqd.EQDOCCriteriaGroup;
-import org.endeavourhealth.imapi.transforms.eqd.EQDOCCriterion;
-import org.endeavourhealth.imapi.transforms.eqd.EQDOCException;
-import org.endeavourhealth.imapi.transforms.eqd.EQDOCExceptionValue;
-import org.endeavourhealth.imapi.transforms.eqd.EQDOCFilterAttribute;
-import org.endeavourhealth.imapi.transforms.eqd.EQDOCFilterRestriction;
-import org.endeavourhealth.imapi.transforms.eqd.EQDOCRangeFrom;
-import org.endeavourhealth.imapi.transforms.eqd.EQDOCRangeTo;
-import org.endeavourhealth.imapi.transforms.eqd.EQDOCRangeValue;
-import org.endeavourhealth.imapi.transforms.eqd.EQDOCRelationship;
-import org.endeavourhealth.imapi.transforms.eqd.EQDOCSearchIdentifier;
-import org.endeavourhealth.imapi.transforms.eqd.EQDOCTestAttribute;
-import org.endeavourhealth.imapi.transforms.eqd.EQDOCValueSet;
-import org.endeavourhealth.imapi.transforms.eqd.EQDOCValueSetValue;
-import org.endeavourhealth.imapi.transforms.eqd.VocCodeSystemEx;
-import org.endeavourhealth.imapi.transforms.eqd.VocColumnValueInNotIn;
-import org.endeavourhealth.imapi.transforms.eqd.VocMemberOperator;
-import org.endeavourhealth.imapi.transforms.eqd.VocOrderDirection;
-import org.endeavourhealth.imapi.transforms.eqd.VocRangeFromOperator;
-import org.endeavourhealth.imapi.transforms.eqd.VocRangeToOperator;
-import org.endeavourhealth.imapi.transforms.eqd.VocRelation;
-import org.endeavourhealth.imapi.transforms.eqd.VocValueUnit;
-import org.endeavourhealth.imapi.vocabulary.GRAPH;
-import org.endeavourhealth.imapi.vocabulary.IM;
-import org.endeavourhealth.imapi.vocabulary.SNOMED;
+import org.endeavourhealth.imapi.model.imq.*;
+import org.endeavourhealth.imapi.model.tripletree.*;
+import org.endeavourhealth.imapi.transforms.eqd.*;
+import org.endeavourhealth.imapi.vocabulary.*;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+
+import java.io.IOException;
+import java.util.*;
+import java.util.stream.Collectors;
 
 import static org.endeavourhealth.imapi.model.tripletree.TTIriRef.iri;
 
@@ -82,11 +26,12 @@ public class EqdResources {
   private final ImportMaps importMaps = new ImportMaps();
   private final Map<Object, Object> vocabMap = new HashMap<>();
   private final Map<String, Set<Node>> valueMap = new HashMap<>();
-  @Getter
-  private String namespace;
+  private final Properties dataMap;
+  private final Map<Integer,String> baseMatchMap = new HashMap<>();
   @Getter
   Map<String, String> reportNames = new HashMap<>();
-  private final Properties dataMap;
+  @Getter
+  private Namespace namespace;
   @Setter
   private Properties criteriaMaps;
   @Setter
@@ -102,6 +47,9 @@ public class EqdResources {
   @Setter
   private TTIriRef columnGroup;
   private int setCounter = 0;
+  @Getter
+  @Setter
+  private int baseCounter=0;
   private String sourceContext;
   @Getter
   @Setter
@@ -114,10 +62,10 @@ public class EqdResources {
   @Getter
   private int subRule = 0;
 
-  public EqdResources(TTDocument document, Properties dataMap) {
+  public EqdResources(TTDocument document, Properties dataMap, Namespace namespace) {
     this.dataMap = dataMap;
     this.document = document;
-    this.namespace = document.getGraph().getIri();
+    this.namespace = namespace;
     this.setVocabMaps();
   }
 
@@ -138,7 +86,7 @@ public class EqdResources {
     ++this.subRule;
   }
 
-  public EqdResources setNamespace(String namespace) {
+  public EqdResources setNamespace(Namespace namespace) {
     this.namespace = namespace;
     return this;
   }
@@ -167,7 +115,7 @@ public class EqdResources {
     this.vocabMap.put(VocOrderDirection.ASC, "ASC");
   }
 
-  public Match convertGroup(EQDOCCriteriaGroup eqGroup) throws IOException, QueryException, EQDException {
+  public Match convertGroup(EQDOCCriteriaGroup eqGroup, Graph graph) throws IOException, QueryException, EQDException {
     this.incrementRule();
     if (eqGroup.getDefinition().getParentPopulationGuid() != null) {
       String parent = eqGroup.getDefinition().getParentPopulationGuid();
@@ -176,19 +124,19 @@ public class EqdResources {
       return match;
     } else {
       List<EQDOCCriteria> groupCriteria = eqGroup.getDefinition().getCriteria();
-      return this.getMatchFromGroup(groupCriteria, eqGroup.getDefinition().getMemberOperator());
+      return this.getMatchFromGroup(groupCriteria, eqGroup.getDefinition().getMemberOperator(), graph);
     }
   }
 
-  private Match getMatchFromGroup(List<EQDOCCriteria> groupCriteria, VocMemberOperator memberOp) throws QueryException, EQDException, IOException {
+  private Match getMatchFromGroup(List<EQDOCCriteria> groupCriteria, VocMemberOperator memberOp, Graph graph) throws QueryException, EQDException, IOException {
     this.subRule = 0;
     if (groupCriteria.size() <= 1) {
       EQDOCCriteria eqCriteria = (EQDOCCriteria) groupCriteria.get(0);
       if (isNegatedCriteria(eqCriteria)) {
         Match match = new Match();
-        match.addNot(convertCriteria(eqCriteria));
+        match.addNot(convertCriteria(eqCriteria, graph));
         return match;
-      } else return convertCriteria(groupCriteria.get(0));
+      } else return convertCriteria(groupCriteria.get(0), graph);
     } else {
       Match boolMatch = new Match();
       if (memberOp == null) {
@@ -198,10 +146,10 @@ public class EqdResources {
 
       for (EQDOCCriteria eqCriteria : groupCriteria) {
         if (isNegatedCriteria(eqCriteria)) {
-          boolMatch.addNot(this.convertCriteria(eqCriteria));
+          boolMatch.addNot(this.convertCriteria(eqCriteria, graph));
         } else if (memberOp == VocMemberOperator.AND) {
-          boolMatch.addAnd(this.convertCriteria(eqCriteria));
-        } else boolMatch.addOr(this.convertCriteria(eqCriteria));
+          boolMatch.addAnd(this.convertCriteria(eqCriteria, graph));
+        } else boolMatch.addOr(this.convertCriteria(eqCriteria, graph));
       }
 
       return boolMatch;
@@ -214,106 +162,116 @@ public class EqdResources {
     } else return false;
   }
 
-  public Match convertCriteria(EQDOCCriteria eqCriteria) throws IOException, QueryException, EQDException {
+  public Match convertCriteria(EQDOCCriteria eqCriteria, Graph graph) throws IOException, QueryException, EQDException {
     if (eqCriteria.getPopulationCriterion() != null) {
       return this.getPopulationQuery(eqCriteria);
     } else {
       this.incrementSubRule();
       if (eqCriteria.getCriterion() != null) {
-        return this.convertCriterion(eqCriteria.getCriterion());
-      }
-      else {
-        Match library= new Match();
-        library.setLibraryItem(eqCriteria.getLibraryItem().getLibraryItem());
-        return library;
+        return this.convertCriterion(eqCriteria.getCriterion(), graph);
+      } else {
+        Map<String,EQDOCCriterion> libraryItems= EqdToIMQ.getLibraryItems();
+        String libraryId=eqCriteria.getLibraryItem().getLibraryItem();
+        if (!libraryItems.containsKey(libraryId)) {
+          System.err.println("Library item not found: " + libraryId);
+          return new Match().setIri(this.namespace + libraryId);
+        }
+        else {
+          System.out.println("Library item found : "+libraryId);
+          return this.convertCriterion(libraryItems.get(libraryId), graph);
+        }
       }
     }
   }
 
   public Match getPopulationQuery(EQDOCCriteria eqCriteria) {
     EQDOCSearchIdentifier search = eqCriteria.getPopulationCriterion();
+    String searchId= search.getReportGuid();
+    if (search.getVersionIndependentGuid()!=null) searchId=search.getVersionIndependentGuid();
+    if (EqdToIMQ.versionMap.containsKey(searchId)) {
+      searchId=EqdToIMQ.versionMap.get(searchId);
+    }
     Match match = new Match();
-    match.addInstanceOf(new Node().setIri(namespace + search.getReportGuid()).setName((String) this.reportNames.get(search.getReportGuid())).setMemberOf(true));
+    match.addInstanceOf(new Node().setIri(namespace + searchId).setName((String) this.reportNames.get(search.getReportGuid())).setMemberOf(true));
     return match;
   }
 
-  private Match convertCriterion(EQDOCCriterion eqCriterion) throws IOException, QueryException, EQDException {
+  private Match convertCriterion(EQDOCCriterion eqCriterion, Graph graph) throws IOException, QueryException, EQDException {
     Match baseMatch = null;
     Match standardMatch = null;
     Match testMatch = null;
     Match linkedMatch = null;
     Match matchHolder = null;
+    String nodeRef=null;
     if (!eqCriterion.getBaseCriteriaGroup().isEmpty()) {
-      baseMatch = this.convertBaseCriteriaGroups(eqCriterion);
+      baseMatch = this.convertBaseCriteriaGroups(eqCriterion, graph);
+      String baseDefinition= new ObjectMapper().writeValueAsString(baseMatch);
+      Integer baseHash= baseDefinition.hashCode();
+      if (baseMatchMap.get(baseHash) == null) {
+        baseCounter++;
+        TTEntity baseEntity= new TTEntity()
+          .setIri(this.namespace + "BaseCriteria_"+ baseHash)
+          .setName("Base events ("+baseCounter+") (IndexEvents)")
+          .setScheme(iri(namespace))
+          .addType(iri(IM.QUERY));
+        baseEntity.set(IM.DEFINITION,TTLiteral.literal(baseMatch));
+        baseMatchMap.put(baseHash, baseEntity.getIri());
+        document.addEntity(baseEntity);
+      }
+      baseMatch= new Match();
+      baseMatch.addInstanceOf(new Node().setIri(baseMatchMap.get(baseHash)).setName("Index events").setMemberOf(true));
     }
 
     EQDOCFilterAttribute filter = eqCriterion.getFilterAttribute();
     if (!filter.getColumnValue().isEmpty() || filter.getRestriction() != null) {
-      standardMatch = this.convertStandardCriterion(eqCriterion, baseMatch == null ? null : baseMatch.getReturn().getAs());
-      if (baseMatch != null) {
-        baseMatch.setThen(standardMatch);
-      }
-
+      standardMatch = this.convertStandardCriterion(eqCriterion, baseMatch == null ? null : "IndexEvent", graph);
+      if (eqCriterion.getDescription()!=null) standardMatch.setDescription(eqCriterion.getDescription());
       if (eqCriterion.getFilterAttribute().getRestriction() != null && eqCriterion.getFilterAttribute().getRestriction().getTestAttribute() != null) {
-        testMatch = this.convertTestCriterion(eqCriterion);
+        testMatch = this.convertTestCriterion(eqCriterion, graph);
         standardMatch.setThen(testMatch);
+        testMatch.setTypeOf(standardMatch.getTypeOf());
       }
     }
-
-    if (baseMatch == null && standardMatch == null) {
-      throw new QueryException("Linked criterion with no base or standard criterion");
-    } else {
-      if (eqCriterion.getLinkedCriterion() != null) {
-        String nodeRef = "rule" + this.rule + (char) (97 + this.subRule - 1);
-        if (eqCriterion.getLinkedCriterion().getRelationship().getParentColumn().equals("DOB")) {
-          nodeRef = "DOB";
-        }
-        if (standardMatch != null) {
-          standardMatch.setReturn((new Return()).setAs(nodeRef));
-        } else {
-          baseMatch.setReturn((new Return()).setAs(nodeRef));
-        }
-
-        if (baseMatch != null) {
-          nodeRef = baseMatch.getReturn().getAs();
-        } else if (standardMatch.getReturn() != null) {
-          nodeRef = standardMatch.getReturn().getAs();
-        }
-
-        linkedMatch = this.convertLinkedCriterion(eqCriterion, nodeRef);
-        linkedMatch.setNodeRef(nodeRef);
-        if (linkedMatch.getThen() == null) {
-          linkedMatch.setOrderBy(null);
-        }
-      }
-
-      if (baseMatch == null && linkedMatch == null && testMatch == null) {
-        standardMatch.setDescription(eqCriterion.getDescription());
-        return standardMatch;
-      } else {
-        matchHolder = (new Match()).setHasLinked(true);
-        if (baseMatch != null) {
-          if (linkedMatch == null) {
-            matchHolder = baseMatch;
-          } else {
-            matchHolder.addAnd(baseMatch);
-            matchHolder.addAnd(linkedMatch);
-          }
-        } else {
-          if (linkedMatch == null) {
-            matchHolder = standardMatch;
-          } else {
-            matchHolder.addAnd(standardMatch);
-            matchHolder.addAnd(linkedMatch);
-          }
-        }
-
+    if (eqCriterion.getLinkedCriterion() != null) {
+      if (baseMatch != null) nodeRef = "IndexEvent";
+      else if (eqCriterion.getLinkedCriterion().getRelationship().getParentColumn().equals("DOB"))
+        nodeRef = "DOB";
+      else nodeRef="LinkedEvent";
+      linkedMatch = this.convertLinkedCriterion(eqCriterion, nodeRef, graph);
+      if (linkedMatch.getThen() == null) linkedMatch.setOrderBy(null);
+    }
+    if (baseMatch!=null) {
+      if (standardMatch != null) {
+        baseMatch.setThen(standardMatch);
+        baseMatch.setTypeOf(standardMatch.getTypeOf());
+        if (linkedMatch != null) {
+          matchHolder = new Match();
+          matchHolder.addAnd(baseMatch);
+          matchHolder.addAnd(linkedMatch);
+          return matchHolder;
+        } else return baseMatch;
+      } else if (linkedMatch != null) {
+        matchHolder = new Match();
+        matchHolder.addAnd(baseMatch);
+        matchHolder.addAnd(linkedMatch);
         return matchHolder;
-      }
+        } else return baseMatch;
     }
+    if (standardMatch != null) {
+      if (linkedMatch != null) {
+        matchHolder = new Match();
+        matchHolder.addAnd(standardMatch);
+        standardMatch.setReturn((new Return()).setAs(nodeRef));
+        matchHolder.addAnd(linkedMatch);
+        return matchHolder;
+      } else return standardMatch;
+    }
+    else throw new EQDException("No match found for standard criterion");
   }
 
-  private Match convertBaseCriteriaGroups(EQDOCCriterion eqCriterion) throws QueryException, EQDException, IOException {
+  private Match convertBaseCriteriaGroups(EQDOCCriterion eqCriterion, Graph graph) throws QueryException, EQDException, IOException {
+    int originalCounter= counter;
+    counter=0;
     String baseContent = (new ObjectMapper()).writeValueAsString(eqCriterion.getBaseCriteriaGroup());
     Match baseMatch;
     if (eqCriterion.getBaseCriteriaGroup().size() > 1) {
@@ -321,49 +279,38 @@ public class EqdResources {
       baseMatch.setIsUnion(true);
 
       for (EQDOCBaseCriteriaGroup baseGroup : eqCriterion.getBaseCriteriaGroup()) {
-        Match subQuery = this.convertBaseCriteriaGroup(baseGroup);
+        Match subQuery = this.convertBaseCriteriaGroup(baseGroup, graph);
+        this.setBaseReturn(subQuery);
         baseMatch.addOr(subQuery);
       }
     } else {
-      baseMatch = this.convertBaseCriteriaGroup((EQDOCBaseCriteriaGroup) eqCriterion.getBaseCriteriaGroup().get(0));
+      baseMatch = this.convertBaseCriteriaGroup(eqCriterion.getBaseCriteriaGroup().get(0), graph);
+      this.setBaseReturn(baseMatch);
     }
 
-
-    baseMatch.setIri(namespace + UUID.nameUUIDFromBytes(baseContent.getBytes()));
     if (baseMatch.getOr() != null && baseMatch.getOr().size() == 2) {
-      Match lastMatch = baseMatch.getOr().get(baseMatch.getOr().size() - 1);
+      Match lastMatch = baseMatch.getOr().getLast();
       baseMatch.setOrderBy(lastMatch.getOrderBy());
     }
-
-    this.setBaseReturn(baseMatch);
+    counter=originalCounter;
     return baseMatch;
   }
 
   private void setBaseReturn(Match match) {
     String base = "IndexEvent";
-    match.setReturn((new Return()).setAs(base).property((p) -> p.setIri(IM.NAMESPACE + "effectiveDate")));
+    match.setReturn((new Return()).setAs(base).property((p) -> p.setIri(Namespace.IM + "effectiveDate")));
   }
 
-  private Match convertBaseCriteriaGroup(EQDOCBaseCriteriaGroup baseGroup) throws QueryException, EQDException, IOException {
-    return this.getMatchFromGroup(baseGroup.getDefinition().getCriteria(), baseGroup.getDefinition().getMemberOperator());
+  private Match convertBaseCriteriaGroup(EQDOCBaseCriteriaGroup baseGroup, Graph graph) throws QueryException, EQDException, IOException {
+    return this.getMatchFromGroup(baseGroup.getDefinition().getCriteria(), baseGroup.getDefinition().getMemberOperator(), graph);
   }
 
-  private void setMatchId(String eqId, int index, Match match) {
-    if (eqId != null && match.getIri() == null) {
-      if (index == 0) {
-        match.setIri(this.namespace + eqId);
-      } else {
-        match.setIri(this.namespace + index + eqId);
-      }
-    }
 
 
-  }
-
-  private Match convertStandardCriterion(EQDOCCriterion eqCriterion, String nodeRef) throws IOException, EQDException {
+  private Match convertStandardCriterion(EQDOCCriterion eqCriterion, String nodeRef, Graph graph) throws IOException, EQDException {
     Match match = null;
     if (!eqCriterion.getFilterAttribute().getColumnValue().isEmpty()) {
-      match = this.convertColumns(eqCriterion.getTable(), eqCriterion.getId(), eqCriterion.getFilterAttribute().getColumnValue(), false);
+      match = this.convertColumns(eqCriterion.getTable(), eqCriterion.getId(), eqCriterion.getFilterAttribute().getColumnValue(), false, graph);
     }
 
     if (eqCriterion.getFilterAttribute().getRestriction() != null) {
@@ -386,14 +333,14 @@ public class EqdResources {
     }
   }
 
-  private Match convertColumns(String table, String eqId, List<EQDOCColumnValue> columns, boolean isTest) throws EQDException, IOException {
+  private Match convertColumns(String table, String eqId, List<EQDOCColumnValue> columns, boolean isTest, Graph graph) throws EQDException, IOException {
     int index = 0;
     Match match = new Match();
 
     for (EQDOCColumnValue cv : columns) {
       if (!this.ignoreColumn(cv)) {
         ++index;
-        this.convertColumn(table, eqId, cv, match, index, isTest);
+        this.convertColumn(table, eqId, cv, match, index, isTest, graph);
       }
     }
 
@@ -404,7 +351,7 @@ public class EqdResources {
     return cv.getColumn().size() == 1 && ((String) cv.getColumn().get(0)).equals("DATE") && cv.getRangeValue() != null && cv.getRangeValue().getRangeFrom() == null && cv.getRangeValue().getRelativeTo() != null && cv.getRangeValue().getRelativeTo().equals("BASELINE") && cv.getRangeValue().getRangeTo() != null && cv.getRangeValue().getRangeTo().getValue() == null && cv.getRangeValue().getRangeTo().getOperator() == VocRangeToOperator.LTEQ;
   }
 
-  private void convertColumn(String table, String eqId, EQDOCColumnValue cv, Match match, int index, boolean isTest) throws EQDException, IOException {
+  private void convertColumn(String table, String eqId, EQDOCColumnValue cv, Match match, int index, boolean isTest, Graph graph) throws EQDException, IOException {
     String tablePath = this.getIMPath(table);
     String eqColumn = String.join("/", cv.getColumn());
     String eqURL = table + "/" + eqColumn;
@@ -420,13 +367,17 @@ public class EqdResources {
       }
     }
     addMatchWhere(match, where);
+    if (where.getIri().equals(Namespace.IM + "value")) {
+      match.setTypeOf((new Node()).setIri(Namespace.IM+"Observation"));
+      match.getPath().getFirst().setTypeOf((new Node()).setIri(Namespace.IM+"Observation"));
+    }
     where.setIri(fullPath[fullPath.length - 1]);
-    this.convertColumnValue(cv, where);
-    this.setMatchId(eqId, index, match);
+    this.convertColumnValue(cv, where, graph);
   }
 
   private String setMatchPath(Match match, String[] paths) throws EQDException, IOException {
     if (paths.length == 1) {
+      match.setTypeOf((new Node()).setIri(Namespace.IM+"Patient"));
       return null;
     } else {
       String path = paths[0];
@@ -448,9 +399,10 @@ public class EqdResources {
       match.addPath(pathMatch);
       pathMatch.setIri(pathIri);
       pathMatch.setInverse(inverse);
-      ++this.counter;
-      pathMatch.setVariable("path" + this.counter);
+      counter++;
+      pathMatch.setVariable(paths[1].substring(paths[1].lastIndexOf("#") + 1)+counter);
       pathMatch.setTypeOf((new Node()).setIri(paths[1]));
+      match.setTypeOf(new Node().setIri(paths[1]));
       return paths.length == 3 ? pathMatch.getVariable() : this.getPathFromPath(pathMatch, paths, 2);
     }
   }
@@ -475,16 +427,16 @@ public class EqdResources {
     pathMatch.addPath(subPathMatch);
     subPathMatch.setIri(pathIri);
     subPathMatch.setInverse(inverse);
-    ++this.counter;
-    subPathMatch.setVariable("path" + this.counter);
+    counter++;
+    subPathMatch.setVariable(paths[offset + 1].substring(paths[offset + 1].lastIndexOf("#") + 1)+counter);
     subPathMatch.setTypeOf((new Node()).setIri(paths[offset + 1]));
     return paths.length == offset + 3 ? pathMatch.getVariable() : this.getPathFromPath(pathMatch, paths, offset + 2);
   }
 
-  private void convertColumnValue(EQDOCColumnValue cv, Where pv) throws IOException, EQDException {
+  private void convertColumnValue(EQDOCColumnValue cv, Where pv, Graph graph) throws IOException, EQDException {
     boolean in = cv.getInNotIn() == VocColumnValueInNotIn.IN;
     if (!cv.getValueSet().isEmpty()) {
-      this.setPropertyValueSets(cv, pv, in);
+      this.setPropertyValueSets(cv, pv, in, graph);
     } else if (!CollectionUtils.isEmpty(cv.getLibraryItem())) {
       String valueLabel = "Library value set";
       for (String vset : cv.getLibraryItem()) {
@@ -502,18 +454,17 @@ public class EqdResources {
     }
   }
 
-  private void setPropertyValueSets(EQDOCColumnValue cv, Where where, boolean in) throws IOException, EQDException {
+  private void setPropertyValueSets(EQDOCColumnValue cv, Where where, boolean in, Graph graph) throws IOException, EQDException {
 
     for (EQDOCValueSet vs : cv.getValueSet()) {
       if (vs.getAllValues() != null) {
-        List<Node> values = this.getExceptionSet(vs.getAllValues());
+        List<Node> values = this.getExceptionSet(vs.getAllValues(), graph);
         for (Node node : values) {
           node.setExclude(true);
         }
         where.setIs(values);
-      } else this.setInlineValues(vs, where, in);
+      } else this.setInlineValues(vs, where, in, graph);
     }
-
   }
 
   public String getIMPath(String eqdPath) throws EQDException {
@@ -521,6 +472,9 @@ public class EqdResources {
     try {
       target = (String) this.dataMap.get(eqdPath);
     } catch (Exception e) {
+      throw new EQDException("unknown map : " + eqdPath);
+    }
+    if (target == null) {
       throw new EQDException("unknown map : " + eqdPath);
     }
 
@@ -538,7 +492,7 @@ public class EqdResources {
           path = path.substring(1);
         }
 
-        path = inverse + (path.startsWith("http") ? path : IM.NAMESPACE + path);
+        path = inverse + (path.startsWith("http") ? path : Namespace.IM + path);
         paths[i] = path;
       }
 
@@ -548,12 +502,12 @@ public class EqdResources {
 
 
   private String resolveIri(String iri) {
-    return iri.startsWith("http") ? iri : IM.NAMESPACE + iri;
+    return iri.startsWith("http") ? iri : Namespace.IM + iri;
   }
 
-  private Match convertTestCriterion(EQDOCCriterion eqCriterion) throws EQDException, IOException {
+  private Match convertTestCriterion(EQDOCCriterion eqCriterion, Graph graph) throws EQDException, IOException {
     EQDOCTestAttribute testAtt = eqCriterion.getFilterAttribute().getRestriction().getTestAttribute();
-    return this.convertColumns(eqCriterion.getTable(), (String) null, testAtt.getColumnValue(), true);
+    return this.convertColumns(eqCriterion.getTable(), (String) null, testAtt.getColumnValue(), true, graph);
   }
 
   private void setRestriction(EQDOCCriterion eqCriterion, Match restricted) throws EQDException {
@@ -568,7 +522,13 @@ public class EqdResources {
     String linkColumn = eqCriterion.getFilterAttribute().getRestriction().getColumnOrder().getColumns().get(0).getColumn().get(0);
     String table = eqCriterion.getTable();
     String orderBy = this.getIMPath(table + "/" + linkColumn);
-    restricted.orderBy((o) -> o.addProperty((new OrderDirection()).setIri(orderBy).setDirection(direction)).setLimit(restrict.getColumnOrder().getRecordCount()));
+    if (restrict.getColumnOrder().getRecordCount()!=1000) {
+      restricted.orderBy((o) -> o
+        .addProperty((new OrderDirection())
+          .setIri(orderBy)
+          .setDirection(direction))
+        .setLimit(restrict.getColumnOrder().getRecordCount()));
+    }
   }
 
   private void addMatchWhere(Match match, Where where) {
@@ -582,9 +542,9 @@ public class EqdResources {
     } else match.getWhere().addAnd(where);
   }
 
-  private Match convertLinkedCriterion(EQDOCCriterion eqCriterion, String nodeRef) throws IOException, QueryException, EQDException {
+  private Match convertLinkedCriterion(EQDOCCriterion eqCriterion, String nodeRef, Graph graph) throws IOException, QueryException, EQDException {
     EQDOCCriterion eqLinkedCriterion = eqCriterion.getLinkedCriterion().getCriterion();
-    Match match = this.convertCriterion(eqLinkedCriterion);
+    Match match = this.convertCriterion(eqLinkedCriterion, graph);
     match.setReturn(null);
     Where relationProperty = new Where();
     addMatchWhere(match, relationProperty);
@@ -595,13 +555,13 @@ public class EqdResources {
     relationProperty.setIri(child.substring(child.lastIndexOf(" ") + 1));
     String parentProperty;
     if (eqRelationship.getParentColumn().contains("DATE")) {
-      parentProperty = IM.NAMESPACE + "effectiveDate";
+      parentProperty = Namespace.IM + "effectiveDate";
     } else {
       if (!eqRelationship.getParentColumn().contains("DOB")) {
         throw new QueryException("Non date linked criteria not managed yet");
       }
 
-      parentProperty = IM.NAMESPACE + "dateOfBirth";
+      parentProperty = Namespace.IM + "dateOfBirth";
     }
 
     if (eqRelationship.getRangeValue() != null) {
@@ -729,8 +689,7 @@ public class EqdResources {
       case "YEAR" -> assignable.setUnit(iri(IM.YEARS));
       case "MONTH" -> assignable.setUnit(iri(IM.MONTHS));
       case "DAY" -> assignable.setUnit(iri(IM.DAYS));
-      case "DATE" -> {
-      }
+      case "DATE" -> { /* No units to set */ }
       default -> throw new EQDException("unknown unit map: " + units);
     }
 
@@ -827,12 +786,12 @@ public class EqdResources {
     this.setCompare(where, toValue, comp, value, units, relation);
   }
 
-  private List<Node> getExceptionSet(EQDOCException set) throws IOException {
+  private List<Node> getExceptionSet(EQDOCException set, Graph graph) throws IOException {
     List<Node> valueSet = new ArrayList<>();
     VocCodeSystemEx scheme = set.getCodeSystem();
 
     for (EQDOCExceptionValue ev : set.getValues()) {
-      Set<Node> values = this.getValueConcepts(scheme, ev.getValue(), ev.getDisplayName(), ev.getLegacyValue());
+      Set<Node> values = this.getValueConcepts(scheme, ev.getValue(), ev.getDisplayName(), ev.getLegacyValue(), graph);
       if (values != null) valueSet.addAll(values.stream().map((v) -> v.setExclude(true)).toList());
       else {
         log.error("Missing exception sets {} {}", ev.getValue(), ev.getDisplayName());
@@ -842,17 +801,17 @@ public class EqdResources {
     return valueSet;
   }
 
-  private TTIriRef getClusterSet(EQDOCValueSet vs) throws IOException {
-    return vs.getCodeSystem() == VocCodeSystemEx.SNOMED_CONCEPT && vs.getDescription() != null && vs.getClusterCode().contains("FlattenedCodeList") ? this.importMaps.getReferenceFromCoreTerm(vs.getDescription()) : null;
+  private TTIriRef getClusterSet(EQDOCValueSet vs, Graph graph) throws IOException {
+    return vs.getCodeSystem() == VocCodeSystemEx.SNOMED_CONCEPT && vs.getDescription() != null && vs.getClusterCode().contains("FlattenedCodeList") ? this.importMaps.getReferenceFromCoreTerm(vs.getDescription(), graph) : null;
   }
 
-  private void setInlineValues(EQDOCValueSet vs, Where pv, boolean in) throws IOException, EQDException {
+  private void setInlineValues(EQDOCValueSet vs, Where pv, boolean in, Graph graph) throws IOException, EQDException {
     VocCodeSystemEx scheme = vs.getCodeSystem();
     if (vs.getDescription() != null) {
       pv.setValueLabel(vs.getDescription());
     }
 
-    TTIriRef cluster = this.getClusterSet(vs);
+    TTIriRef cluster = this.getClusterSet(vs, graph);
     if (cluster != null) {
       if (in)
         pv.addIs((new Node()).setIri(cluster.getIri()).setName(cluster.getName()).setMemberOf(true));
@@ -860,7 +819,7 @@ public class EqdResources {
     } else {
       Set<Node> setContent = new HashSet<>();
       for (EQDOCValueSetValue ev : vs.getValues()) {
-        Set<Node> setMembers = this.processEQDOCValueSet(scheme, ev);
+        Set<Node> setMembers = this.processEQDOCValueSetValue(scheme, ev, graph);
         if (!setMembers.isEmpty()) {
           for (Node memberOrConcept : setMembers) {
             if (memberOrConcept.isMemberOf()) {
@@ -939,9 +898,8 @@ public class EqdResources {
 
   private Query convertToEcl(VocCodeSystemEx scheme, Set<Node> setContent) throws EQDException {
     if (scheme == VocCodeSystemEx.SCT_CONST) {
-      String property = SNOMED.NAMESPACE + "127489000";
+      String property = Namespace.SNOMED + "127489000";
       String name = null;
-      String exclusions = "";
       Query eclQuery = (new Query());
       Where where = new Where();
       where.setAnyRoleGroup(true);
@@ -955,7 +913,7 @@ public class EqdResources {
           notWhere.addIs(node);
         } else where.addIs(node);
         if (node.getName() != null && name == null) {
-          name = this.getShortName(node.getName(), (String) null);
+          name = this.getShortName(node.getName(), null);
         }
       }
 
@@ -976,8 +934,8 @@ public class EqdResources {
     }
   }
 
-  private Set<Node> processEQDOCValueSet(VocCodeSystemEx scheme, EQDOCValueSetValue ev) throws IOException {
-    Set<Node> concepts = this.getValueConcepts(scheme, ev);
+  private Set<Node> processEQDOCValueSetValue(VocCodeSystemEx scheme, EQDOCValueSetValue ev, Graph graph) throws IOException {
+    Set<Node> concepts = this.getValueConcepts(scheme, ev, graph);
     if (concepts == null) {
       String eqValue = ev.getValue();
       throw new IOException("Missing " + eqValue + " " + ev.getDisplayName());
@@ -991,7 +949,7 @@ public class EqdResources {
       if (!ev.getException().isEmpty()) {
         for (EQDOCException exc : ev.getException()) {
           for (EQDOCExceptionValue val : exc.getValues()) {
-            Set<Node> exceptionValue = this.getValueConcepts(scheme, val);
+            Set<Node> exceptionValue = this.getValueConcepts(scheme, val, graph);
             if (exceptionValue != null) {
               for (Node node : exceptionValue) {
                 if (val.isIncludeChildren()) {
@@ -1010,36 +968,36 @@ public class EqdResources {
     }
   }
 
-  private Set<Node> getValueConcepts(VocCodeSystemEx scheme, EQDOCExceptionValue ev) throws IOException {
-    return this.getValueConcepts(scheme, ev.getValue(), ev.getDisplayName(), ev.getLegacyValue());
+  private Set<Node> getValueConcepts(VocCodeSystemEx scheme, EQDOCExceptionValue ev, Graph graph) throws IOException {
+    return this.getValueConcepts(scheme, ev.getValue(), ev.getDisplayName(), ev.getLegacyValue(), graph);
   }
 
-  private Set<Node> getValueConcepts(VocCodeSystemEx scheme, EQDOCValueSetValue ev) throws IOException {
-    return this.getValueConcepts(scheme, ev.getValue(), ev.getDisplayName(), ev.getLegacyValue());
+  private Set<Node> getValueConcepts(VocCodeSystemEx scheme, EQDOCValueSetValue ev, Graph graph) throws IOException {
+    return this.getValueConcepts(scheme, ev.getValue(), ev.getDisplayName(), ev.getLegacyValue(), graph);
   }
 
-  private Set<Node> getValueConcepts(VocCodeSystemEx scheme, String originalCode, String originalTerm, String legacyCode) throws IOException {
+  private Set<Node> getValueConcepts(VocCodeSystemEx scheme, String originalCode, String originalTerm, String legacyCode, Graph graph) throws IOException {
     if (scheme == VocCodeSystemEx.EMISINTERNAL) {
       String key = this.sourceContext + "/EMISINTERNAL/" + originalCode;
       Object mapValue = this.dataMap.get(key);
       if (mapValue != null) {
-        return this.getValueIriResult(mapValue);
+        return this.getValueIriResult(mapValue, graph);
       } else if (isValidUUID(originalCode)) {
-        return this.getValueIriResult(this.namespace + originalCode);
+        return this.getValueIriResult(this.namespace + originalCode, graph);
       } else {
         throw new IllegalArgumentException("unmapped emis internal code : " + key);
       }
     } else if (scheme != VocCodeSystemEx.SNOMED_CONCEPT && !scheme.value().contains("SCT")) {
       throw new IllegalArgumentException("code scheme not recognised : " + scheme.value());
     } else {
-      List<String> schemes = new ArrayList<>();
-      schemes.add(SNOMED.NAMESPACE);
-      schemes.add(GRAPH.EMIS);
-      schemes.add(IM.NAMESPACE);
-      schemes.add(GRAPH.BNF);
+      List<Namespace> schemes = new ArrayList<>();
+      schemes.add(Namespace.SNOMED);
+      schemes.add(Namespace.EMIS);
+      schemes.add(Namespace.IM);
+      schemes.add(Namespace.BNF);
       Set<Node> snomed = valueMap.get(originalCode);
       if (snomed == null) {
-        snomed = this.getValuesFromOriginal(originalCode, originalTerm, legacyCode, schemes);
+        snomed = this.getValuesFromOriginal(originalCode, originalTerm, legacyCode, schemes, graph);
         if (snomed != null) {
           this.valueMap.put(originalCode, snomed);
         }
@@ -1059,9 +1017,9 @@ public class EqdResources {
     }
   }
 
-  private Set<Node> getValueIriResult(Object mapValue) throws IOException {
+  private Set<Node> getValueIriResult(Object mapValue, Graph graph) throws IOException {
     Node iri = (new Node()).setIri(mapValue.toString());
-    String name = this.importMaps.getCoreName(iri.getIri());
+    String name = this.importMaps.getCoreName(iri.getIri(), graph);
     if (name != null) {
       iri.setName(name);
     }
@@ -1071,22 +1029,22 @@ public class EqdResources {
     return result;
   }
 
-  private Set<Node> getValuesFromOriginal(String originalCode, String originalTerm, String legacyCode, List<String> schemes) {
-    Set<Entity> snomed = this.getCoreFromCode(originalCode, schemes);
+  private Set<Node> getValuesFromOriginal(String originalCode, String originalTerm, String legacyCode, List<Namespace> schemes, Graph graph) {
+    Set<Entity> snomed = this.getCoreFromCode(originalCode, schemes, graph);
     if (snomed == null && legacyCode != null) {
-      snomed = this.getCoreFromCode(legacyCode, schemes);
+      snomed = this.getCoreFromCode(legacyCode, schemes, graph);
     }
 
     if (snomed == null && originalTerm != null) {
-      snomed = this.getCoreFromLegacyTerm(originalTerm);
+      snomed = this.getCoreFromLegacyTerm(originalTerm, graph);
     }
 
     if (snomed == null) {
-      snomed = this.getLegacyFromTermCode(originalCode);
+      snomed = this.getLegacyFromTermCode(originalCode, graph);
     }
 
     if (snomed == null && originalTerm != null) {
-      snomed = this.getCoreFromLegacyTerm(originalTerm + " (emis code id)");
+      snomed = this.getCoreFromLegacyTerm(originalTerm + " (emis code id)", graph);
     }
     if (snomed == null)
       return null;
@@ -1101,37 +1059,42 @@ public class EqdResources {
       .collect(Collectors.toSet());
   }
 
-  private Set<Entity> getLegacyFromTermCode(String originalCode) {
+  private Set<Entity> getLegacyFromTermCode(String originalCode, Graph graph) {
     try {
-      return this.importMaps.getLegacyFromTermCode(originalCode, GRAPH.EMIS);
+      return this.importMaps.getLegacyFromTermCode(originalCode, Namespace.EMIS, graph);
     } catch (Exception e) {
       log.error("unable to retrieve iri from term code {}", e.getMessage());
       return Collections.emptySet();
     }
   }
 
-  private Set<Entity> getCoreFromLegacyTerm(String originalTerm) {
+  private Set<Entity> getCoreFromLegacyTerm(String originalTerm, Graph graph) {
     try {
       if (originalTerm.contains("s disease of lymph nodes of head, face AND/OR neck")) {
         log.info("!!");
       }
-      return this.importMaps.getCoreFromLegacyTerm(originalTerm, GRAPH.EMIS);
+      return this.importMaps.getCoreFromLegacyTerm(originalTerm, Namespace.EMIS, graph);
     } catch (Exception e) {
       log.error("unable to retrieve from term {}", e.getMessage());
       return Collections.emptySet();
     }
   }
 
-  private Set<Entity> getCoreFromCode(String originalCode, List<String> schemes) {
-    return this.importMaps.getCoreFromCode(originalCode, schemes);
+  private Set<Entity> getCoreFromCode(String originalCode, List<Namespace> schemes, Graph graph) {
+    return this.importMaps.getCoreFromCode(originalCode, schemes, graph);
   }
 
   private void addUsedIn(TTEntity set) {
-    set.addObject(iri(IM.USED_IN), iri(this.namespace + this.activeReport));
+    String usedIn= activeReport;
+    if (EqdToIMQ.versionMap.containsKey(usedIn)) {
+      usedIn= EqdToIMQ.versionMap.get(usedIn);
+    }
+    set.addObject(iri(IM.USED_IN), iri(this.namespace + usedIn));
   }
 
   private void createLibraryValueSet(String iri, String name) {
     TTEntity valueSet = (new TTEntity()).setIri(iri).setName(name).addType(iri(IM.CONCEPT_SET));
+    valueSet.setScheme(iri(namespace));
     this.addUsedIn(valueSet);
     this.document.addEntity(valueSet);
   }
@@ -1156,6 +1119,7 @@ public class EqdResources {
       TTEntity valueSet = new TTEntity()
         .setIri(namespace + vs.getId())
         .setName(name)
+        .setScheme(iri(namespace))
         .addType(iri(IM.CONCEPT_SET))
         .set(iri(IM.DEFINITION), TTLiteral.literal(definition));
       this.addUsedIn(valueSet);
@@ -1181,16 +1145,21 @@ public class EqdResources {
     } else {
       TTEntity valueSet = new TTEntity()
         .setIri(namespace + vs.getId()).setName(name).addType(iri(IM.CONCEPT_SET));
+      valueSet.setScheme(iri(namespace));
       if (this.columnGroup != null) {
         valueSet.addObject(iri(IM.USED_IN), iri(this.columnGroup.getIri()));
       } else {
-        valueSet.addObject(iri(IM.USED_IN), iri(this.namespace + this.activeReport));
+        String usedIn= activeReport;
+        if (EqdToIMQ.versionMap.containsKey(usedIn)) {
+          usedIn= EqdToIMQ.versionMap.get(usedIn);
+        }
+        valueSet.addObject(iri(IM.USED_IN), iri(this.namespace + usedIn));
       }
 
       for (Node node : setContent) {
         TTNode instance = new TTNode();
         valueSet.addObject(iri(IM.ENTAILED_MEMBER), instance);
-        instance.set(IM.INSTANCE_OF, iri(node.getIri()));
+        instance.set(IM.INSTANCE_OF.toString(), iri(node.getIri()));
         if (node.isExclude()) {
           instance.set(iri(IM.EXCLUDE), TTLiteral.literal(true));
         }
